// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog base demo works fine 1`] = `
<div>
  <button
    class="t-button t-button--primary"
  >
    显示对话框
  </button>
   
  <div
    class="t-dialog-ctx t-not-visable v-transfer-dom"
    style="z-index: 2500;"
  >
    <div
      class="t-dialog-mask"
    />
    <div
      class="t-dialog t-dialog--default t-dialog--top"
    >
      <div
        class="t-dialog__header"
      >
        <h5
          class="title"
        >
          对话框标题
        </h5>
      </div>
      <div
        class="t-dialog__body"
      >
        <div>
          对话框内容
        </div>
      </div>
      <div
        class="t-dialog__footer"
      >
        <div>
          <button
            class="t-button t-button--line"
          >
            取消
          </button>
          <button
            class="t-button t-button--primary"
          >
            确认
          </button>
        </div>
      </div>
      <svg
        class="t-icon t-icon-close"
        name="close"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.8902814,3.4 L12.5973882,4.10710678 L8.708,7.996 L12.5973882,11.8852814 L11.8902814,12.5923882 L8.001,8.703 L4.11210678,12.5923882 L3.405,11.8852814 L7.294,7.996 L3.405,4.10710678 L4.11210678,3.4 L8.001,7.289 L11.8902814,3.4 Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Dialog others demo works fine 1`] = `
<div>
  <button
    class="t-button t-button--primary"
  >
    非模态可拖拽
  </button>
   
  <button
    class="t-button t-button--primary"
  >
    挂载在body
  </button>
   
  <button
    class="t-button t-button--primary"
  >
    挂载特定元素
  </button>
   
  <button
    class="t-button t-button--primary"
  >
    挂载函数返回节点
  </button>
   
  <div
    class="t-dialog-ctx t-not-visable v-transfer-dom"
    style="z-index: 2500;"
  >
    <div
      class="t-dialog t-dialog--default t-dialog--top"
    >
      <div
        class="t-dialog__header"
      >
        <h5
          class="title"
        >
          对话框标题
        </h5>
      </div>
      <div
        class="t-dialog__body"
      >
        <div>
          对话框内容
        </div>
      </div>
      <div
        class="t-dialog__footer"
      >
        <div>
          <button
            class="t-button t-button--line"
          >
            取消
          </button>
          <button
            class="t-button t-button--primary"
          >
            确认
          </button>
        </div>
      </div>
      <svg
        class="t-icon t-icon-close"
        name="close"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.8902814,3.4 L12.5973882,4.10710678 L8.708,7.996 L12.5973882,11.8852814 L11.8902814,12.5923882 L8.001,8.703 L4.11210678,12.5923882 L3.405,11.8852814 L7.294,7.996 L3.405,4.10710678 L4.11210678,3.4 L8.001,7.289 L11.8902814,3.4 Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
   
  <!---->
   
  <!---->
   
  <!---->
</div>
`;

exports[`Dialog plugin demo works fine 1`] = `
<div>
  <p>
    插件调用方式一：this.$dialog(options)
  </p>
   
  <p>
    插件调用方式二：this.$dialog.confirm(options)
  </p>
   
  <p>
    插件调用方式三：this.$dialog.alert(options)
  </p>
  <br />
   
  <button
    class="t-button t-button--primary"
  >
    dialog
  </button>
   
  <button
    class="t-button t-button--primary"
  >
    confirm
  </button>
   
  <button
    class="t-button t-button--primary"
  >
    alert
  </button>
</div>
`;

exports[`Dialog position demo works fine 1`] = `
<div>
  <button
    class="t-button t-button--primary"
  >
    默认位置
  </button>
   
  <button
    class="t-button t-button--primary"
  >
    垂直居中
  </button>
   
  <button
    class="t-button t-button--primary"
  >
    自定义偏移量
  </button>
   
  <div
    class="t-dialog-ctx t-not-visable v-transfer-dom"
    style="z-index: 2500;"
  >
    <div
      class="t-dialog-mask"
    />
    <div
      class="t-dialog t-dialog--default t-dialog--top"
    >
      <div
        class="t-dialog__header"
      >
        <h5
          class="title"
        >
          对话框标题
        </h5>
      </div>
      <div
        class="t-dialog__body"
      >
        <div>
          对话框内容
        </div>
      </div>
      <div
        class="t-dialog__footer"
      >
        <div>
          <button
            class="t-button t-button--line"
          >
            取消
          </button>
          <button
            class="t-button t-button--primary"
          >
            确认
          </button>
        </div>
      </div>
      <svg
        class="t-icon t-icon-close"
        name="close"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.8902814,3.4 L12.5973882,4.10710678 L8.708,7.996 L12.5973882,11.8852814 L11.8902814,12.5923882 L8.001,8.703 L4.11210678,12.5923882 L3.405,11.8852814 L7.294,7.996 L3.405,4.10710678 L4.11210678,3.4 L8.001,7.289 L11.8902814,3.4 Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
   
  <div
    class="t-dialog-ctx t-not-visable v-transfer-dom"
    style="z-index: 2500;"
  >
    <div
      class="t-dialog-mask"
    />
    <div
      class="t-dialog t-dialog--default t-dialog--center"
    >
      <div
        class="t-dialog__header"
      >
        <h5
          class="title"
        >
          对话框标题
        </h5>
      </div>
      <div
        class="t-dialog__body"
      >
        <div>
          水平居中显示的对话框
        </div>
      </div>
      <div
        class="t-dialog__footer"
      >
        <div>
          <button
            class="t-button t-button--line"
          >
            取消
          </button>
          <button
            class="t-button t-button--primary"
          >
            确认
          </button>
        </div>
      </div>
      <svg
        class="t-icon t-icon-close"
        name="close"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.8902814,3.4 L12.5973882,4.10710678 L8.708,7.996 L12.5973882,11.8852814 L11.8902814,12.5923882 L8.001,8.703 L4.11210678,12.5923882 L3.405,11.8852814 L7.294,7.996 L3.405,4.10710678 L4.11210678,3.4 L8.001,7.289 L11.8902814,3.4 Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
   
  <div
    class="t-dialog-ctx t-not-visable v-transfer-dom"
    style="z-index: 2500;"
  >
    <div
      class="t-dialog-mask"
    />
    <div
      class="t-dialog t-dialog--default t-dialog--center"
      style="transform: translate(calc(-50% - 20px + 100%),calc(-50% - 200px));"
    >
      <div
        class="t-dialog__header"
      >
        <h5
          class="title"
        >
          对话框标题
        </h5>
      </div>
      <div
        class="t-dialog__body"
      >
        <div>
          自定义偏移量的对话框
        </div>
      </div>
      <div
        class="t-dialog__footer"
      >
        <div>
          <button
            class="t-button t-button--line"
          >
            取消
          </button>
          <button
            class="t-button t-button--primary"
          >
            确认
          </button>
        </div>
      </div>
      <svg
        class="t-icon t-icon-close"
        name="close"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.8902814,3.4 L12.5973882,4.10710678 L8.708,7.996 L12.5973882,11.8852814 L11.8902814,12.5923882 L8.001,8.703 L4.11210678,12.5923882 L3.405,11.8852814 L7.294,7.996 L3.405,4.10710678 L4.11210678,3.4 L8.001,7.289 L11.8902814,3.4 Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Dialog standalone demo works fine 1`] = `
<div>
  <div
    class="standalone-dialog t-dialog-ctx t-is-visable v-transfer-dom"
    style="z-index: 0;"
  >
    <div
      class="t-dialog-mask"
    />
    <div
      class="t-dialog t-dialog--default t-dialog--top"
    >
      <div
        class="t-dialog__header"
      >
        <h5
          class="title"
        >
          对话框标题
        </h5>
      </div>
      <div
        class="t-dialog__body"
      >
        <div>
          对话框内容
        </div>
      </div>
      <div
        class="t-dialog__footer"
      >
        <div>
          <button
            class="t-button t-button--line"
          >
            取消
          </button>
          <button
            class="t-button t-button--primary"
          >
            确认
          </button>
        </div>
      </div>
      <svg
        class="t-icon t-icon-close"
        name="close"
        version="1.1"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.8902814,3.4 L12.5973882,4.10710678 L8.708,7.996 L12.5973882,11.8852814 L11.8902814,12.5923882 L8.001,8.703 L4.11210678,12.5923882 L3.405,11.8852814 L7.294,7.996 L3.405,4.10710678 L4.11210678,3.4 L8.001,7.289 L11.8902814,3.4 Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;
